Debugging COM ports

--- a/Homework 9/USB_IMU/firmware/USB_IMU.X/nbproject/Makefile-genesis.properties
+++ b/Homework 9/USB_IMU/firmware/USB_IMU.X/nbproject/Makefile-genesis.properties
@@ -1,8 +1,8 @@
 #
-#Mon May 21 20:53:17 CDT 2018
+#Mon Jun 11 23:43:19 CDT 2018
 default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=fcf9db1a3d46b4ef4e0a46afcbf02251
-default.languagetoolchain.dir=D\:\\Programs\\XC32\\bin
-configurations-xml=95b5281bbfcd32fe9455b03531a81f91
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.05\\bin
+configurations-xml=16dff612b3879ef5c12879873c0f95d0
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=c8c2915d32f5d7e4be49831bc9827ab0
 default.languagetoolchain.version=2.05
 host.platform=windows
