--- a/Homework 7/imu.X/nbproject/Makefile-genesis.properties
+++ b/Homework 7/imu.X/nbproject/Makefile-genesis.properties
@@ -1,7 +1,7 @@
 #
-#Mon May 07 17:29:21 CDT 2018
+#Mon Jun 11 22:59:29 CDT 2018
 default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=fcf9db1a3d46b4ef4e0a46afcbf02251
-default.languagetoolchain.dir=D\:\\Programs\\XC32\\bin
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc32\\v2.05\\bin
 configurations-xml=db7c842001254328575935ef62e1a673
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=c8c2915d32f5d7e4be49831bc9827ab0
 default.languagetoolchain.version=2.05
